vlib/v/checker/tests/modules/missing_enum.out
vlib/v/checker/tests/modules/missing_enum/main.v:1:1: error: project must include a `main` module or be a shared library (compile with `v -shared`)
    1 | module missing_enum
      | ^
    2 |
    3 | pub enum ColorList{
